# pep-reader

./: .editorconfig  README.md  pep.py  pep_reader.py  pyproject.toml  setup.py
pep/: pep.py
