[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pep_reader"
authors = [
    {name = "kylexlau", email = "lylexlau@gmail.com"},
]
description = "A PEP reader"
readme = "README.md"
requires-python = ">=3.1"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
]
dynamic = ["version"]

[project.scripts]
pep-reader = "pep_reader:main"

[tool.setuptools.dynamic]
version = {attr = "pep_reader.__version__"}
